# poolfrontend

./: README.md  pool.cfg.example  pool.cfg.json
doc/: httpApi.md
src/: CMakeLists.txt  config.cpp  config.h  http.cpp  http.h  main.cpp  noderpc.cpp  passwordHash.cpp  plugin.h
src/cmake/: ProjectConfig4cpp.cmake  ProjectPoolcore.cmake
src/migrate/: migrate.cpp  migratecommon.cpp  migratecommon.h  struct2.h  v3.cpp
test/: poolfrontend.py
